syntax = "proto3";

package cn.edu.cug.cs.gtl.protos;
import "cn/edu/cug/cs/gtl/protos/value.proto";
option cc_enable_arenas = true;
option csharp_namespace = "cn.edu.cug.cs.gtl.protos";
option java_package = "cn.edu.cug.cs.gtl.protos";
option java_multiple_files = true;
option java_outer_classname = "Sql";

message SqlQueryStatement{
    repeated string select_field=1;
    repeated string from_field=2;
    repeated string where_field=3;
    repeated string order_by_field=4;
    repeated string group_by_field=5;
    repeated string having_field=6;
    int32 limit_offset=7;
    int32 limit_rows=8;
}

message SqlUpdateStatement{
    string table_name=1;
    map<string,string> set_field=2;
    repeated string where_field=3;
}

message SqlDeleteStatement{
    string table_name=1;
    repeated string where_field=3;
}

message SqlInsertStatement{
    string table_name=1;
    map<string,string> column_value=2;
}

message SqlCommand {
    string command_text = 1;
}

message SqlResult {
    bool status = 1; //返回执行的状态
    string command_text = 2;
    DataSet dataset = 3;
}

service SqlCommandService {
    rpc execute (SqlCommand) returns (SqlResult) {
    }
}

